# Karen

Karen_Backend/: CMakeLists.txt
Karen_Backend/certificates/: dh2048.pem  localhost.key  server.crt
Karen_Backend/implements/: dataBase.cpp  helperFunctions.cpp  main.cpp  mainImplement.cpp  sitizen.cpp
Karen_Backend/implements/evants/: evants.cpp
Karen_Backend/includes/: dataBase.hpp  evantSwitch.hpp  helperFunctions.hpp  mainImplement.hpp  sitizen.hpp
Karen_Backend/includes/evants/: evants.hpp
Karen_Frontend/: index.html  script.js  styles.css
Karen_Frontend/addNewDeal/: addNewDeal.html  script.js  styles.css
Karen_Frontend/showAllDeal/: script.js  showAllDeal.html  styles.css
Karen_Frontend/showConcretDeal/: script.js  showConcretDeal.html  styles.css
